src/objects/Account_Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Programs</relationshipLabel>
        <relationshipName>Account_Programs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Status__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Execution</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Status__c</fullName>
        <label>Planning Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Post-Plan</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_SFID__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Service_Level_Class_Descr__c</fullName>
        <label>RADL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retain</fullName>
                </value>
                <value>
                    <fullName>Acquire</fullName>
                </value>
                <value>
                    <fullName>Light Touch</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click on submitted button from program planning screen will check this field</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_SFID__c</columns>
        <columns>Program_SFID__c</columns>
        <columns>Execution_Status__c</columns>
        <columns>Planning_Status__c</columns>
        <columns>Service_Level_Class_Descr__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00}</displayFormat>
        <label>Account Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>